samples/_failures_safe/1761166782_7e1531_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_623f7d2d.c:2:2: error: expected ‘;’ before ‘typedef’
    2 | c
      |  ^
      |  ;
./samples/SAFE/__tmp_623f7d2d.c: In function ‘main’:
./samples/SAFE/__tmp_623f7d2d.c:153:16: error: missing terminating " character
  153 |         printf("Invalid
      |                ^~~~~~~~
./samples/SAFE/__tmp_623f7d2d.c:153:9: error: expected expression at end of input
  153 |         printf("Invalid
      |         ^~~~~~
./samples/SAFE/__tmp_623f7d2d.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_623f7d2d.c:153:9: error: expected declaration or statement at end of input
